[package]
name = "rizzup"
version = "0.0.1"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
crossterm = { version = "0.27.0", features = ["event-stream"] }
futures = "0.3.30"
ratatui = { version = "0.26.2", features = ["unstable-widget-ref"] }
slotmap = "1.0.7"
tokio = { version = "1.37.0", features = ["full"] }

[[example]]
name = "hello-world"
path = "examples/hello-world.rs"

[[example]]
name = "text-input"
path = "examples/text-input.rs"

[[example]]
name = "async"
path = "examples/async.rs"

[[example]]
name = "todo-app"
path = "examples/todo-app.rs"
